--- a/layouts/partials/theme/sidebar.html
+++ b/layouts/partials/theme/sidebar.html
@@ -1,4 +1,4 @@
-<div id='sidebarContainer' class='column is-narrow is-paddingless is-marginless'>
+<div id='sidebarContainer' class='column is-narrow is-paddingless is-marginless{{if .IsHome}} is-sidebar-collapsed{{end}}'>
   <div id='sidebarWrapper' class='is-fixed'>
     <div id='sidebar' class='is-marginless'>
       <aside class='menu is-paddingless is-marginless'>
