Use normal word breaking for unstyled table headers.

--- a/assets/sass/theme/global.sass
+++ b/assets/sass/theme/global.sass
@@ -255,6 +255,7 @@ table:not([style])
   th
     color: findColorInvert($content-table-color)
     background: $content-table-color
+    word-break: normal
   th,
   td
     border: 1px solid smooth-color($content-table-color, 25)
