--- a/assets/sass/theme/content.sass
+++ b/assets/sass/theme/content.sass
@@ -23,8 +23,12 @@
     text-align: center
     font-weight: 700
   #content
-    padding-right: $navbar-height
-    padding-left: $navbar-height
+    +mobile
+      padding-right: $theme-gap-medium-size
+      padding-left: $theme-gap-medium-size
+    +tablet
+      padding-right: $navbar-height
+      padding-left: $navbar-height
     position: relative
     +touch
       +static-size-width(100%)
