Also hide ToC on desktop.

--- a/assets/sass/theme/content.sass
+++ b/assets/sass/theme/content.sass
@@ -32,6 +32,8 @@
     +touch
       +static-size-width(100%)
     +desktop
+      +static-size-width(100%)
+    +widescreen
       +static-size-width(calc(100% - #{$toc-width}))
     &:after
       height: $theme-gap-large-size
