--- a/layouts/partials/theme/toc.html
+++ b/layouts/partials/theme/toc.html
@@ -1,4 +1,4 @@
-<div class='column is-sticky is-hidden-touch is-paddingless' id='tocContainer'>
+<div class='column is-sticky is-hidden-touch is-hidden-desktop-only is-paddingless' id='tocContainer'>
   <div class='toc-header'>
     <h6 class='toc-title is-marginless'>{{i18n "toc_title"}}</h6>
     <i title='{{i18n "toc_backtotop"}}' id='tocBackToTop' class='fa-solid fa-circle-arrow-up'></i>
